# .github

.github/workflows/: build-mcp.yml  deploy.yml
profile/: README.md
server/: .env.example  Caddyfile  docker-compose.yml  setup.sh
server/mcp-server/: Dockerfile  claude-mcp-config.json  pyproject.toml
server/mcp-server/src/nortiqa_mcp/: server.py
server/postgres/init/: 01-init-databases.sh
