[project]
name = "nortiqa-mcp"
version = "0.1.0"
description = "MCP server — control de infraestructura Nortiqa Lab"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "docker>=7.0.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
nortiqa-mcp = "nortiqa_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
